--- a/app/src/main/res/layout/activity_fullscreen.xml
+++ b/app/src/main/res/layout/activity_fullscreen.xml
@@ -15,7 +15,7 @@
         <com.android.kaffka.arduinoledpainel.views.PixelGridView
             android:id="@+id/grid"
             android:layout_width="match_parent"
-            android:layout_height="440dp"/>
+            android:layout_height="wrap_content"/>
 
         <View
             android:id="@+id/color_show"
