Adds a saved frames counter

--- a/app/src/main/res/layout/activity_fullscreen.xml
+++ b/app/src/main/res/layout/activity_fullscreen.xml
@@ -63,23 +63,31 @@
             android:layout_marginTop="16dp"
             android:max="255"/>
 
+        <TextView
+            android:id="@+id/textFramesSaved"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Frames salvos: 0"
+            android:layout_marginTop="8dp"/>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
+
             <Button
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:onClick="clearCode"
-                android:text="CLEAR CODE"/>
+                android:text="CL. CODE"/>
 
             <Button
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:onClick="clearScreen"
-                android:text="CLEAR SCREEN"/>
+                android:text="CL. SCREEN"/>
 
             <Button
                 android:layout_width="0dp"
