--- a/app/src/main/res/layout/activity_fullscreen.xml
+++ b/app/src/main/res/layout/activity_fullscreen.xml
@@ -76,12 +76,30 @@
             android:layout_marginTop="16dp"
             android:max="1000"/>
 
-        <TextView
-            android:id="@+id/textFramesSaved"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Saved frames: 0"
-            android:layout_marginTop="8dp"/>
+            android:layout_marginTop="8dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textFramesSaved"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="1"
+                android:gravity="center_vertical"
+                android:text="Saved frames: 0"/>
+
+            <CheckBox
+                android:id="@+id/checkboxClearScreen"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical|right"
+                android:layout_weight="1"
+                android:gravity="center_vertical"
+                android:text="Clear Screen"/>
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
