Changes the grid to 16x16 and adds a bluetooth icon

--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -5,6 +5,13 @@
         android:id="@+id/action_share"
         android:checked="true"
         android:title="share"
-        android:icon="@android:drawable/ic_menu_share"
+        android:icon="@drawable/ic_share"
+        app:showAsAction="always" />
+
+    <item
+        android:id="@+id/action_send_bluetooth"
+        android:checked="true"
+        android:title="share"
+        android:icon="@drawable/ic_bluetooth"
         app:showAsAction="always" />
 </menu>
