--- a/app/src/main/res/layout/activity_fullscreen.xml
+++ b/app/src/main/res/layout/activity_fullscreen.xml
@@ -24,8 +24,8 @@
                 android:layout_height="30dp"
                 android:layout_marginLeft="8dp"
                 android:layout_weight="1"
-                android:onClick="openColorPicker"
-                android:background="#000000"/>
+                android:background="#000000"
+                android:onClick="openColorPicker"/>
 
             <ImageView
                 android:id="@+id/img_color_picker"
@@ -66,6 +66,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"/>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1px"
+            android:background="#888888"/>
 
         <TextView
             android:id="@+id/textDelay"
