--- a/app/src/main/res/layout/activity_fullscreen.xml
+++ b/app/src/main/res/layout/activity_fullscreen.xml
@@ -10,7 +10,7 @@
                   android:layout_height="wrap_content"
                   android:background="@android:color/white"
                   android:orientation="vertical"
-                  tools:context="com.android.kaffka.arduinoledpainel.FullscreenActivity">
+                  tools:context="com.android.kaffka.arduinoledpainel.activities.FullscreenActivity">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -85,6 +85,7 @@
             android:id="@+id/textDelay"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
             android:text="Delay: "/>
 
         <SeekBar
@@ -97,6 +98,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
             android:layout_marginTop="8dp"
             android:orientation="horizontal">
 
@@ -124,19 +126,26 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-            <Button
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
+            <ImageView
+                android:id="@+id/img_save_persistent"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_weight="1"
+                android:src="@drawable/ic_save"/>
+
+            <ImageView
+                android:layout_width="30dp"
+                android:layout_height="30dp"
                 android:layout_weight="1"
                 android:onClick="clearCode"
-                android:text="CL. CODE"/>
+                android:src="@drawable/ic_clear"/>
 
-            <Button
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
+            <ImageView
+                android:layout_width="30dp"
+                android:layout_height="30dp"
                 android:layout_weight="1"
                 android:onClick="exportCode"
-                android:text="SAVE FRAME"/>
+                android:src="@drawable/ic_add"/>
 
         </LinearLayout>
     </LinearLayout>
