--- a/app/src/main/res/layout/activity_fullscreen.xml
+++ b/app/src/main/res/layout/activity_fullscreen.xml
@@ -12,6 +12,15 @@
                   android:orientation="vertical"
                   tools:context="com.android.kaffka.arduinoledpainel.activities.FullscreenActivity">
 
+        <TextView
+            android:id="@+id/text_bluetooth_status"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/colorPrimaryDark"
+            android:gravity="center"
+            android:padding="2dp"
+            android:textColor="@android:color/white"/>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
