--- a/app/src/main/res/layout/activity_designs.xml
+++ b/app/src/main/res/layout/activity_designs.xml
@@ -5,7 +5,7 @@
               android:orientation="vertical">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/savedImagesList"
+        android:id="@+id/designsList"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 </LinearLayout>
