--- a/app/src/main/res/layout/save_design_dialog.xml
+++ b/app/src/main/res/layout/save_design_dialog.xml
@@ -2,14 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
-              android:layout_margin="8dp"
+              android:layout_margin="32dp"
               android:orientation="vertical">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
-        android:text="Write a title for your design:"/>
+        android:text="Escolha um título para seu desenho:"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -29,6 +29,7 @@
             android:id="@+id/dialog_done"
             android:layout_width="30dp"
             android:layout_height="30dp"
+            android:layout_marginRight="8dp"
             android:src="@drawable/ic_check"/>
 
     </LinearLayout>
