--- a/app/src/main/res/layout/designs_item.xml
+++ b/app/src/main/res/layout/designs_item.xml
@@ -28,5 +28,14 @@
             android:text="@{viewmodel.title}"
             android:textSize="16sp"
             tools:text="name of the drawing"/>
+
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_gravity="center_vertical|right"
+            android:layout_marginRight="16dp"
+            android:onClick="@{viewmodel.delete}"
+            android:src="@drawable/ic_delete"/>
+
     </android.support.v7.widget.CardView>
 </layout>
